# context

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: config.toml.example
src/: chunker.py  cli.py  commands.py  embeddings.py  indexer.py  server.py  vector_store.py
src/context/: cli.py
src/context/commands/: add.py  auth.py  clear.py  configure.py  export.py  list.py  remove.py  search.py  stats.py  sync.py
src/context/mcp/: server.py
