[project]
name = "context"
version = "0.1.0"
description = "MCP server for semantic search across your notes using vector embeddings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.2.1",
    "click>=8.3.0",
    "fastmcp>=2.13.0.1",
    "keyring>=25.6.0",
]
[project.scripts]
context = "context.cli:cli"
